Java 25 updates in RomHandler classes